Controllers, index updated to match the other branch